<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_home" />
        <item
            android:id="@+id/nav_addBook"
            android:title="@string/add_book"
            android:icon="@drawable/menu_add" />
        <item
            android:id="@+id/nav_buyBook"
            android:title="@string/buy_book"
            android:icon="@drawable/menu_buy" />
    </group>
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/my_profile"
                    android:icon="@drawable/menu_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/log_out"
                    android:icon="@drawable/menu_logout" />
            </group>
        </menu>
    </item>
</menu>