<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/lightWhite"
    android:paddingStart="15dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/nav_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:textColor="#ED000000" />

    <TextView
        android:id="@+id/nav_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:layout_above="@id/nav_slogan"
        android:textSize="28sp" />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ycce"
        android:contentDescription="@string/logo"
        android:layout_above="@id/nav_logo" />

</RelativeLayout>